--- a/dsp_hw1/c_cpp/Makefile
+++ b/dsp_hw1/c_cpp/Makefile
@@ -5,4 +5,4 @@ LDFLAGS+=-lm     # link to math library
 TARGET:train test check
 all: $(TARGET)
 clean:
-	rm -rf train test check model_*   # type make clean to remove the compiled file
+	$(RM) $(TARGET)    # type make clean to remove the compiled file
